Solve bug on iOS

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -56,6 +56,9 @@ noscript {
   @include absolute-center;
   @include square(calc(var(--large-icon-size) + var(--normal-margin) * 2));
 
+  // as a result of the firefox fix, it is required for iOS devices
+  transform: translate3d(-50%, -50%, 0.00001px);
+
   &:hover svg {
     box-shadow: var(--shadow);
   }
@@ -92,10 +95,13 @@ noscript {
     left: 0;
     height: 100%;
     width: 100%;
-
-    // the picture of videos is not always visible on firefox mobile without this
-    transform: translate3d(0, 0, 0.00001px);
   }
+}
+
+video,
+iframe {
+  // the picture of videos is not always visible on firefox mobile without this
+  transform: translate3d(0, 0, 0.00001px);
 }
 
 img,
